--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         <div class="footer-row">
             <div class="footer-left">
                 <h1>Opening Hours</h1>
-                <p><i class="fa fa-regular fa-clock"></i>Monday to Friday - 9am to 9pm</p>
-                <p><i class="fa fa-regular fa-clock"></i>Saturday to Sunday - 8am to 1pm</p>
+                <p><i class="fa fa-regular fa-clock"></i>Monday to Friday: 9am - 9pm</p>
+                <p><i class="fa fa-regular fa-clock"></i>Saturday to Sunday: 8am - 1pm</p>
             </div>
             <div class="footer-right">
                 <h1>Get In Touch</h1>
